--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="amns.css">
+    <link rel="stylesheet" href="index.css">
     <title>Amns</title>
 </head>
 <body>
@@ -201,42 +201,8 @@
     </div>
 </div>
 
-<!--box5-->
-<!--<div id="contact-details">
-    <div id="contact-icon">
-        <p><i class="fa-solid fa-square-phone"></i> House Authorities</p>
-    </div>
 
-    <div id="detailing">
-        <table id="new-table">
-            <tr>
-                <th>Name</th>
-                <th>Post</th>
-                <th>Phone</th>
-                <th>E-mail</th>
-            </tr>
-            <tr>
-                <td>x</td>
-                <td>Warden</td>
-                <td>-----90</td>
-                <td>x@amns.in</td>
-            </tr>
-            <tr>
-                <td>y</td>
-                <td>Warden</td>
-                <td>-----91</td>
-                <td>y@amns.in</td>
-            </tr>
-            <tr>
-                <td>z</td>
-                <td>Warden</td>
-                <td>-----92</td>
-                <td>z@amns.in</td>
-            </tr>
-        </table>
-    </div>
-</div>-->
 
-    <script src="amns.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
