--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--box1-->
     <div id="navbar">
         <div id="name">
-            <h2>AM/NS</h2>
+            <h2>Bullet </h2>
             <h2>INDIA</h2>
         </div>
         <div id="web-search">
@@ -27,7 +27,7 @@
 <!--new update 2-->
     <div id="menu-section">
         <div id="company-urgent">
-            <h3>AM/NS</h3>
+            <h3>MY INDIA</h3>
             <i class="fa-solid fa-bell"></i>
         </div>
         <div id="menuinfo">
@@ -118,7 +118,7 @@
         <ul>
             <h3>Quater Allotment</h3>
             <li><i class="fa-solid fa-gauge-high"></i><p>Residential Dashboard</p></li>
-            <li><i class="fa-solid fa-arrow-up-right-from-square"></i><p> AMNS Residential Website</p></li>
+            <li><i class="fa-solid fa-arrow-up-right-from-square"></i><p> BI Residential Website</p></li>
             <li><i class="fa-solid fa-user"></i><p> User Manual</p></li>
             <h3>Quater Complaints</h3>
             <li><i class="fa-solid fa-bullhorn"></i><p>Quater Complaints</p></li>
@@ -126,7 +126,7 @@
             <h3>Quater Finance</h3>
             <li><i class="fa-solid fa-coins"></i><p>Quater Finance Dashboard</p></li>
             <h3>Module Designers</h3>
-            <li><i class="fa-solid fa-phone"></i><p> Rahul Anjane</p></li>
+            
             <li><i class="fa-solid fa-phone"></i><p>Piyush</p></li>
             <h3>Support</h3>
             <li><i class="fa-solid fa-circle-info"></i><p>officers@amns.in</p></li>
@@ -147,7 +147,7 @@
                 <tr>
                     
                     <th>Name</th>
-                    <td>Rahul Anjane</td>
+                    <td>Rahul</td>
                 </tr>
 
                 <tr>
