--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--box1-->
     <div id="navbar">
         <div id="name">
-            <h2>Bullet </h2>
+            <h2>BULLET </h2>
             <h2>INDIA</h2>
         </div>
         <div id="web-search">
@@ -27,7 +27,7 @@
 <!--new update 2-->
     <div id="menu-section">
         <div id="company-urgent">
-            <h3>MY INDIA</h3>
+            <h3>BULLET INDIA</h3>
             <i class="fa-solid fa-bell"></i>
         </div>
         <div id="menuinfo">
